# pinpam

./: .SRCINFO  .gitignore  CMakeLists.txt  Cargo.toml  PKGBUILD  POLICY_CONFIG.md  README.md  REFACTORING_NOTES.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_FIXES.md  compile_commands.json  flake.nix  pinpam_test  policy  policy.example  result  service.conf
.cache/clangd/index/: lib.c.9B7C79377E0C0A7A.idx  lib.h.AC0ACA2E6986843E.idx
.github/: copilot-instructions.md
include/: lib.h  tpm_common.h
pinpam-core/: Cargo.toml
pinpam-core/locales/: en.yml  sk.yml
pinpam-core/src/: lib.rs  pinconstants.rs  pindata.rs  pinindex.rs  pinmanager.rs  pinpolicy.rs  util.rs
pinpam-pam/: Cargo.toml
pinpam-pam/locales/: en.yml  sk.yml
pinpam-pam/src/: lib.rs
pinutil/: Cargo.toml
pinutil/locales/: en.yml  sk.yml
pinutil/src/: main.rs  sandbox.rs
src/: lib.c  setup_pin.c  tpm_common.c
